--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-plugins</artifactId>
-        <version>3.22.0-02</version>
+        <version>3.28.0-01</version>
     </parent>
 
     <groupId>com.epomeroy.jira.crowd.nexus3</groupId>
     <artifactId>nexus3-jira-crowd-plugin</artifactId>
-    <version>3.22.0</version>
+    <version>3.28.0</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <packaging>bundle</packaging>
@@ -55,6 +55,8 @@
                 <version>3.8.0</version>
                 <configuration>
                     <compilerId>javac</compilerId>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <plugin>
